# RIT_workspace

./: .gitignore
3D_data_compression/map_compression/: draco_script.sh  readme
3D_data_compression/map_compression/1-append_frame_name/: CMakeLists.txt  append_frame_name  append_frame_name.cpp
3D_data_compression/map_compression/2-find_closest_frame/: find_closest_frame.py  script.sh
3D_data_compression/map_compression/3-build_map/: CMakeLists.txt  build_map  build_map.cpp  build_map_ford  build_map_ford.cpp  script.sh
3D_data_compression/map_compression/4-map_compression/: CMakeLists.txt  map_compression  map_compression.cpp
3D_data_compression/map_compression/4a-map_compression/: map_compression  map_compression.cpp  script.sh
3D_data_compression/map_compression/4a2-map_compression/: CMakeLists.txt  map_compression_a2  map_compression_a2.cpp  script.sh
3D_data_compression/map_compression/4b-map_compression_octree/: CMakeLists.txt  map_compression_octree  map_compression_octree.cpp  script.sh  script1.sh
3D_data_compression/map_compression/4c-map_compression_basemap/: CMakeLists.txt  map_compression_basemap  map_compression_basemap.cpp  script.sh
3D_data_compression/map_compression/4d-map_compression_basemap_only/: CMakeLists.txt  map_compression_basemap_only  map_compression_basemap_only.cpp  script.sh
3D_data_compression/map_compression/5-map_decompression/: CMakeLists.txt  map_decompression  map_decompression.cpp
3D_data_compression/map_compression/5a-map_decompression/: map_decompression  map_decompression.cpp  script.sh
3D_data_compression/map_compression/5a2-map_decompression/: CMakeLists.txt  map_decompression_a2  map_decompression_a2.cpp  script.sh
3D_data_compression/map_compression/5b-map_decompression_octree/: CMakeLists.txt  map_decompression_octree  map_decompression_octree.cpp  script.sh  script1.sh
3D_data_compression/map_compression/5c-map_decompression_basemap/: CMakeLists.txt  map_decompression_basemap  map_decompression_basemap.cpp  script.sh  script1.sh
3D_data_compression/map_compression/5d-map_decompression_basemap_only/: CMakeLists.txt  map_decompression_basemap_only  map_decompression_basemap_only.cpp  script.sh
3D_data_compression/map_compression/6-error_calculation/: CMakeLists.txt  error_calculation  error_calculation.cpp  script.sh  script_draco.sh
3D_data_compression/map_compression/7-convert_format/: README.md  pcd2bin.py  pcd2ply.py  script.sh
3D_data_compression/map_compression/8-compress_textfie/: compress.py  script.sh
3D_data_compression/map_compression/ford_dataset_manuplation/: QtoE.py  README.txt  associate_pose.py  bag_to_csv.py  config.yaml  create_basemap.py  script.sh  transform_pcd.py  unix-diff.py
3D_data_compression/map_compression/usc_data_transformation/: TtoE.py
autopass/: script.sh  script_DIFF.sh
autopass/cluster/: CMakeLists.txt  cluster  cluster.cpp
autopass/diff/: CMakeLists.txt  diff  diff.cpp
autopass/fuse/: CMakeLists.txt  fuse  fuse.cpp  script.sh
autopass/outlier/: CMakeLists.txt  outlier  outlier.cpp
change_detection/: CMakeLists.txt  change_detection_frameVSmap.cpp
change_detection/raw_framevsframe_change/: CMakeLists.txt  raw_framevsframe_change  raw_framevsframe_change.cpp
change_detection/run instructions/: run_cmake
pcl_codes/clustering/: CMakeLists.txt  clustering  clustering.cpp
pcl_codes/pcd_read_test/: pcd_read  pcd_read.cpp
pcl_codes/segmentation/: planar_segmentation  planar_segmentation.cpp
